samples/_failures_safe/1761183975_86ee06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58d246bc.c: In function ‘main’:
./samples/SAFE/__tmp_58d246bc.c:136:22: error: expected ‘;’ at end of input
  136 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_58d246bc.c:136:5: error: expected declaration or statement at end of input
  136 |     for (int i = 0; i
      |     ^~~
